toogle no funciona

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
                 <a href="" id="logo">
                     <div class="logo"></div>
                 </a>
-                <a href="" id="toggle">
+                <a href="" id="toggle" >
                     <div class="menu"></div>
                 </a>
             </div>
         </nav>
     </header>
+<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
