menu que no funciona

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
                     <div class="logo"></div>
                 </a>
                 <a href="" id="toggle" >
-                    <div class="menu"></div>
+                    <div class="menu">
+                    </div>
                 </a>
+            </div>
+            <div class="nav-background">
+                            <ul>
+                                <li><a href="#">Work</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Carrers</a></li>
+                                <li><a href="#">Ideas</a></li>
+                                <li><a href="#">Events</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
             </div>
         </nav>
     </header>
