--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <body id="body">
     <header>
-        <nav id="header" class="header">
+        <nav id="nav-header" class="header">
             <div class="nav-bar">
-                <a href="" id="logo">
+                <a href="#" id="logo">
                     <div class="logo"></div>
                 </a>
-                <a href="" id="toggle" >
+                <a href="#" id="toggle" >
                     <div class="menu">
                     </div>
                 </a>
             </div>
             <div class="nav-background">
                             <ul>
-                                <li><a href="#">Work</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Carrers</a></li>
-                                <li><a href="#">Ideas</a></li>
-                                <li><a href="#">Events</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Work.</a></li>
+                                <li><a href="#">About.</a></li>
+                                <li><a href="#">Carrers.</a></li>
+                                <li><a href="#">Ideas.</a></li>
+                                <li><a href="#">Events.</a></li>
+                                <li><a href="#">Contact.</a></li>
                             </ul>
             </div>
         </nav>
